--- a/vignettes/Model_TTU.Rmd
+++ b/vignettes/Model_TTU.Rmd
@@ -113,7 +113,7 @@ mdl_smry_ls <- list(mdl_types_lup = mdl_types_lup,
 For the initial set of tests on candidate models, we just need data from one timepoint as we are not exploring longitudinal change at this stage. We also only need data on the candidate predictors and total utility score. so can slim down our dataset to these parameters.
 
 ```{r}
-bl_tb <- transform_ds_for_tstng(scored_data_tb, 
+bl_tb <- youthvars::transform_ds_for_tstng(scored_data_tb, 
                                 depnt_var_nm_1L_chr = ds_smry_ls$depnt_var_nm_1L_chr,
                                 candidate_predrs_chr = ds_smry_ls$candidate_predrs_chr,
                                 dep_var_max_val_1L_dbl = 0.999,
@@ -263,7 +263,7 @@ mdl_smry_ls$smry_of_mdl_sngl_predrs_tb %>%
 We rerun each of the models from the previous step, but this time add all our candidate covariates to each model. 
 
 ```{r}
-bl_tb <- scored_data_tb %>% transform_ds_for_tstng(candidate_predrs_chr = ds_smry_ls$candidate_predrs_chr,
+bl_tb <- scored_data_tb %>% youthvars::transform_ds_for_tstng(candidate_predrs_chr = ds_smry_ls$candidate_predrs_chr,
         covar_var_nms_chr = ds_smry_ls$candidate_covar_nms_chr, remove_all_msng_1L_lgl = T,
         round_val_1L_chr = ds_smry_ls$round_bl_val_1L_chr)
 mdl_smry_ls$mdls_with_covars_smry_tb <- write_mdl_type_covars_mdls(bl_tb,
