--- a/vignettes/Model_TTU.Rmd
+++ b/vignettes/Model_TTU.Rmd
@@ -169,7 +169,8 @@ mdl_smry_ls$smry_of_sngl_predr_mdls_tb <- write_sngl_predr_multi_mdls_outps(data
         predr_var_desc_1L_chr = mdl_smry_ls$predr_var_desc_1L_chr, 
         predr_vals_dbl = mdl_smry_ls$predr_vals_dbl,
         path_to_write_to_1L_chr = path_to_write_to_1L_chr, new_dir_nm_1L_chr =  "A_Candidate_Mdls_Cmprsn",
-        mdl_types_lup = mdl_smry_ls$mdl_types_lup) 
+        mdl_types_lup = mdl_smry_ls$mdl_types_lup,
+        dictionary_tb = youthvars::make_final_rpln_ds_dict()) 
 
 ```
 
