modfied report tmpl

--- a/data-raw/inst/Markdown/_mdl_rpt_tmpl.Rmd
+++ b/data-raw/inst/Markdown/_mdl_rpt_tmpl.Rmd
@@ -2,10 +2,10 @@
 output: html_document
 ---
 
+\newpage
 \blandscape
 
 {{section_ttl_1L_chr}}
-
 
 ```{r echo = F, results="asis"}
 brms_mdl_print_ls <- make_brms_mdl_print_ls(mdl_ls = readRDS({{path_to_mdl_1L_chr}}),
@@ -14,8 +14,10 @@ brms_mdl_print_ls <- make_brms_mdl_print_ls(mdl_ls = readRDS({{path_to_mdl_1L_ch
                                             output_type_1L_chr = {{output_type_1L_chr}})
 rlang::exec(ready4show::print_table,!!!brms_mdl_print_ls[[5]])
 ```
+
 \elandscape
 \newpage
+
 ```{r, fig.cap={{plt_nms_chr}}, echo=FALSE, message=F}
 knitr::include_graphics({{paths_to_mdl_plts_chr}})
 ```
