--- a/data-raw/inst/Markdown/preamble.tex
+++ b/data-raw/inst/Markdown/preamble.tex
@@ -6,6 +6,6 @@
 } {
     \endorigfigure
 }
-\usepackage{lscape}
+\usepackage{pdflscape}
 \newcommand{\blandscape}{\begin{landscape}}
 \newcommand{\elandscape}{\end{landscape}}
