--- a/inst/Markdown/Report_TS_Mdls.Rmd
+++ b/inst/Markdown/Report_TS_Mdls.Rmd
@@ -46,7 +46,7 @@ output:
       - '--lua-filter=Filters/author-info-blocks.lua'
       - '--lua-filter=Filters/pagebreaks.lua'
 params:
-  existing_predrs_chr: !r NULL
+  existing_predrs_ls: !r NULL
   outp_smry_ls: !r NULL
   output_type_1L_chr: HTML
   rltv_path_to_data_dir_1L_chr: ../Output/F_TS_Mdls
@@ -76,7 +76,7 @@ params_ls <- params
 ```{r echo=FALSE}
 predr_vars_nms_ls <- make_predr_vars_nms_ls(main_predrs_chr = params_ls$outp_smry_ls$predr_cmprsn_tb$predr_chr, 
                        covars_ls = list(params_ls$outp_smry_ls$prefd_covars_chr),
-                       existing_predrs_chr = params_ls$existing_predrs_chr 
+                       existing_predrs_ls = params_ls$existing_predrs_ls 
                        )
 
 knit_pars_ls <- make_knit_pars_ls(rltv_path_to_data_dir_1L_chr = params_ls$rltv_path_to_data_dir_1L_chr,
@@ -87,4 +87,8 @@ knit_pars_ls <- make_knit_pars_ls(rltv_path_to_data_dir_1L_chr = params_ls$rltv_
                   output_type_1L_chr = params_ls$output_type_1L_chr,
                   section_type_1L_chr = params_ls$section_type_1L_chr
                   ) 
+```
+```{r, echo=FALSE, results='asis'}
+ knit_pars_ls %>%
+  purrr::walk(~knit_mdl_rprt(.x, path_to_mdl_rprt_tmpl_1L_chr = "_mdl_rpt_tmpl.Rmd"))
 ```
